# cards2pdf

./: .gitignore  README.md  pyproject.toml
src/cards2pdf/: __main__.py
src/cards2pdf/cli/: __init__.py
